fix(UI): refresh toaster z-index

--- a/packages/pytheas-ui/app/styles/refresh-button.scss
+++ b/packages/pytheas-ui/app/styles/refresh-button.scss
@@ -6,6 +6,7 @@
     border-radius: 5px;
     display: none;
     align-items: center;
+    z-index: 10;
 
     .refresh-toaster__refresh-button,
     .refresh-toaster__close-button {
